# investor-agent

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
investor_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py  tools.py
investor_agent/skills/investment-analysis/: skill.yaml
tests/: test_main.py
